--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "express": "^4.14.0",
     "mobx": "^2.6.3",
     "mobx-react": "^4.0.2",
+    "moment": "^2.17.0",
     "react": "^0.14.6",
+    "react-big-calendar": "^0.11.1",
     "react-dom": "^0.14.6",
+    "underscore": "^1.8.3",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.14.1"
   },
